--- a/Annmarieschedule.html
+++ b/Annmarieschedule.html
@@ -54,6 +54,7 @@
 		<td>Honors Calculus</td>
 	</tr>
 	<tr>
+	<!-- Here contains some rowspans since those cycles had lunch 2 -->
 		<th>11:25 - 11:50a.m. Period 3-1</th>
 		<td><i>Lunch 1</i> </td>
 		<td rowspan= "2">Honors Physics </td>
@@ -64,6 +65,7 @@
 		<td rowspan= "2">Webpage Design </td>
 	</tr>
 	<tr>
+	<!-- These contain rowspans for cycles with lunch 1 -->
 		<th>11:55 - 12:10p.m. Period 3-2</th>
 		<td rowspan= "2">Honors Philosophy of Religion</td>
 		<td rowspan= "2">Honors Calculus</td>
