--- a/CSS project/cupcakes.html
+++ b/CSS project/cupcakes.html
@@ -17,8 +17,7 @@
 	<!-- This will give information about my cupcake topic that the search engine can display -->
 	<h1> <b>Many Yummy Cupcakes!!</b> </h1>
 	<h3> <b>All cupcakes are amazing and delicious!!</b> </h3>
-	</header>
-	
+	</header>	
 	<main>
 	<!-- Majority of the webiste will go in here -->
 	<p>Cupcakes are small cakes designed to serve one person, which may be baked in a small thin paper or aluminum cup. They are much quicker (and easier) to make than regular cakes. It's basically just eating a mini cake just for you! </p>
@@ -28,6 +27,8 @@
 	
 	<p>Making these yummy treats is very fun and easy to do! Simple make the batter with your basic ingredients of eggs, milk, flour, vanilla extract, etc. Then,
 	if you want a specific flavor, add that into the mixture like chocolate chips or cranberries. Anything you add to your cupcake will make it even more delicious. </p>
+	<figure><img src="cupcakes.jpg" alt="cupcakes" height= "300px" width= "300px" title="yummy cupcakes"> 
+	</figure>
 	</main>
 <footer>
 <!-- This information about cupcakes will be seen at the botton of the page -->
