--- a/Girl Develop it/girlsdevelopit.html
+++ b/Girl Develop it/girlsdevelopit.html
@@ -15,12 +15,12 @@
 	
 	<body>
 		<header>
-	<!--logo and background color-->
+	<!--contains the logo and background color-->
 			<img src="girllogo.jpg"alt="Logo"class="center">
 	    </header>
 
 	    <main>
-	<!-- Main info -->
+	<!-- here is the main info page -->
 	    	<h1>About</h1>
 	    </main>
 			<p>It can be intimidating for women to learn and ask questions when they
@@ -29,14 +29,14 @@
 			females with the confidence in their technological abilities, we can 
 			<b><i>begin to change this landscape.</i></b></p>
 			
-	<!--photos-->
+	<!--these are photos for the website-->
 			<img src="girl-with-laptop.jpg" alt="girl-coding"class="right"alt="Girl with laptop">
 			<img src="girls-coding.jpg" alt="girl-with-laptop"class="right"alt="Girls coding">
 		<h2>Our Locations</h2>
 			<ul>
 				<li>USA</li>
 				<ul>
-	<!--Social Media links-->
+	<!--contains links for the webiste-->
 					<li><a href="https://www.girldevelopit.com/chapters/new-york">New York</a></li>
 					<li><a href="https://www.girldevelopit.com/chapters/columbus">Columbus</a></li>
 					<li><a href="https://www.girldevelopit.com/chapters/austin">Austin</a></li>
@@ -50,7 +50,7 @@
 			</ul>
 			
 	    <footer>
-		<!-- Visit info -->
+		<!-- here are the social media links for the website -->
 		<hr></hr>
 		Visit us on...
 		<p><a href="https://twitter.com/girldevelopit?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Twitter</a>
